--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -7,5 +7,38 @@
 </head>
 <body>
     <h1>Things I need to do</h1>
+    <!-- We can render the items key from the context dictionary that we just created
+using this double curly bracket syntax.
+This is called a template variable and anything that you return to the template
+in that dictionary can be rendered in the same way. 
+That includes almost anything that you can use in Python
+Meaning you can return strings, numbers, lists, other dictionaries, or even functions and classes. -->
+    <!-- {{ items }} -->
+<!-- A query set is kind of like a list which means we can iterate through it in our
+template just like we could iterate through a list in Python. 
+If we go back to the file.
+We can adjust the syntax slightly to turn it into a loop that will iterate through our items-->
+    <table>
+        {% for item in items %}
+        <tr>
+            <!-- if block inside loop -->
+            {% if item.done %}
+                <td><strike>{{ item.name }}</strike></td>
+            {% else %}
+                <td>{{ item.name }}</td>
+            {% endif %}
+        </tr>
+        <!-- There's one last thing i'd like to add here and that's to handle what should
+happen if our database doesn't have any todo items in it.
+To handle that we can use a special tag called empty. Right before the endfor tag.
+After the empty tag all we want to do is render a single row.
+With a single td element in it. Which says you have nothing to do. -->
+        {% empty %}
+        <tr><td>You have nothing to do</td></tr>
+
+        {% endfor %}
+    </table>
+    
+    
 </body>
 </html>
