--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -38,6 +38,7 @@ With a single td element in it. Which says you have nothing to do. -->
 
         {% endfor %}
     </table>
+    <a href="/add">Add item</a>
     
     
 </body>
